fixed quarter alignment issue

--- a/styles/_wm-clock.scss
+++ b/styles/_wm-clock.scss
@@ -54,9 +54,6 @@ body {
     border-radius: 50%;
     background-color: lighten($pink, 20);
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
@@ -75,11 +72,11 @@ body {
 
     &:nth-child( even ) {
       transform: rotate( 90deg );
-      top: 50% - 1.2%;
+      top: 50% - 5%;
     }
 
     &:nth-child( odd ){
-      left: 50% - 1.2%;
+      left: 50%;
     }
 
     &:nth-child( 1 ) {
